operators actions
